2013-09-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_html.php: Added function
	"print_autorefresh_button".
	
	* include/ajax/autorefresh.php: New file.
	
	* include/js/integria.js: Added functions "beginReloadTimeout",
	"reloadPage", "clearReloadTimeout", "setAutorefreshSeconds",
	"enableAutorefresh", "disableAutorefresh", "toggleAutorefresh"
	and "changeAutorefreshTime".
	
	* include/styles/integria.css: Added new style rules.
	
	* operation/incidents/incident_search_logic.php: Added a new
	control to autorefresh the section.

2013-09-23  Dario Rodriguez <dario@artica.es>

	* include/newsletter.php,
	include/integria_cron.php,
	operation/newsletter/issue_definition.php,
	operation/newsletter/track_newsletter.php: Developed
	feature to track email views using a void pixel image.
	Also change the way issues count Reads to use this
	new tracking method.

2013-09-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_html.php: Added function
	"print_autorefresh_button".
	
	* include/ajax/autorefresh.php: New file.
	
	* include/js/integria.js: Added functions "beginReloadTimeout",
	"reloadPage", "clearReloadTimeout", "setAutorefreshSeconds",
	"enableAutorefresh", "disableAutorefresh", "toggleAutorefresh"
	and "changeAutorefreshTime".
	
	* include/styles/integria.css: Added new style rules.
	
	* operation/incidents/incident_search_logic.php: Added a new
	control to autorefresh the section.
	
2013-09-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_projects.php: Added the functions
	"get_workorder_acl" and "get_workorders".
	
	* operation/workorders/wo_files.php,
	  operation/workorders/wo_notes.php,
	  operation/workorders/wo.php: Improved the ACL.
	
	* operation/search.php: Fixed the link to the incidents.
	Improved the ACL of the CRM elements.

2013-09-23  Dario Rodriguez <dario@artica.es>

	* include/functions_crm.php,
	operation/leads/lead_statistics.php,